# fast_cmaes

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
examples/: api_server.py  rich_tui_demo.py
src/: ffi.rs  lib.rs
tests/: benchmarks.rs  hard_benchmarks.rs  stability.rs  very_hard_lite.rs
